src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* .coGqTS,
.iiIORr.show-less{
  display: none !important;
} */
@media (min-width: 1024px) {
  .jHeaAq {
    min-height: 60vh;
  }
}
.gJAGSz {
  background: none !important;
  color: black !important;
}
.gJAGSz.active {
  background: none !important;
  color: black !important;
}

.gJAGSz {
  font-weight: 400 !important;
  text-align: left !important;
}

.fwRzpx {
  display: none !important;
}

.deskTopTitle {
  color: #007fff;
  font-size: 1rem;
  font-weight: 600;
  margin: 0.25rem 0 0.5rem 0;
  text-align: left;
  width: 95%;
}

.desktopSubTitle {
  color: #000;
  font-size: 0.85rem;
  font-weight: 600;
  margin: 0;
  text-align: left;
  width: 97%;
  padding: 0.5rem 0 0.5rem 0rem;
}

.desktopdescription {
  font-size: 0.85rem;
  font-weight: 400;
}

.coGqTS,
.jaQaOm {
  display: none !important;
}

/* -Media query */
@media (max-width: 1024px) {
  .coGqTS,
  .jaQaOm {
    display: block !important;
  }

  .jsVFgY {
    display: none !important;
  }

  .jIatKG {
    display: none !important;
  }

  .emqEhB {
    width: 100% !important;
  }

  .bHAjAv {
    padding: 0px !important;
  }

  .jSOuST {
    margin-left: 0.5rem !important;
  }

  .bzKFtd {
    padding: 0.5rem 0 0rem 0.5rem !important;
  }

  .jSOuST {
    padding: 0rem 0 0.5rem 0.5rem !important;
  }
}

@media (min-width: 580px) {
  .keecDZ {
    min-height: 260px !important;
  }
}

